add structured concurrency and scoped values guidance to java-developer and spring-boot-developer skills